# scale

./: .gitmodules  CMakeLists.txt
cmake/: coverage.cmake
include/scale/: outcome_throw.hpp  scale.hpp  scale_decoder_stream.hpp  scale_encoder_stream.hpp  scale_error.hpp  types.hpp
include/scale/detail/: fixed_witdh_integer.hpp  variant.hpp
src/: CMakeLists.txt  scale_decoder_stream.cpp  scale_encoder_stream.cpp  scale_error.cpp
src/common/: CMakeLists.txt  buffer.cpp  buffer_back_insert_iterator.cpp  hexutil.cpp  hexutil.hpp
src/detail/: fixed_witdh_integer.hpp  variant.hpp
src/scale/: scale_decoder_stream.cpp  scale_encoder_stream.cpp
src/scale/common/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer_back_insert_iterator.cpp  hexutil.cpp  hexutil.hpp  visitor.hpp
src/scale/detail/: fixed_witdh_integer.hpp  variant.hpp
src/scale/macro/: unreachable.hpp
test/: CMakeLists.txt  scale_boolean_test.cpp  scale_collection_test.cpp  scale_compact_test.cpp  scale_convenience_functions_test.cpp  scale_fixed_test.cpp  scale_optional_test.cpp  scale_strings_test.cpp  scale_variant_test.cpp
test/testutil/: gmock_actions.hpp  outcome.hpp
